package model;

public enum EstadoEvento {
    Programada,
    EnCurso,
    Finalizada
}
