package model;

public enum EstadoInscripcion {
    Pendiente,
    Pagada,
    Confirmada
}
