package model;

public enum Genero {
    Masculino,
    Femenino,
    Otro
}
