package model;

public interface IRegistroTiempo {
    Resultado registrarTiempo(String idInscripcion, double tiempoSegundos);
}
