package model;

public enum TallaCamiseta {
    XS,
    S,
    M,
    L,
    XL,
    XXL
}
