package model;

public enum TipoActividad {
    CARRERA,
    CICLISMO,
    NATACION,
    TRIATLON,
    OTRO
}
