package model;

public enum TipoMultimedia {
    Imagen,
    Video,
    Documento
}
