package model;

public enum TipoSangre {
    ONegativo,
    OPositivo,
    A,
    B,
    AB
}
